--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -66,10 +66,33 @@
     .contacttextarea {
         width: 60%;
         margin-left: 20%;
+        border-radius: 0px;
     }
     .contactbutton {
-        width: 63%;
+        width: 64%;
         margin-left: 20%;
+        background-color: white;
+        color: black;
+        border-color: black
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .contacttitle {
+        font-size: 2.2rem;
+    }
+    .contactinput,
+    .contacttextarea {
+        width: 70%;
+        margin-left: 15%;
+        border-radius: 0px;
+    }
+    .contactbutton {
+        width: 75%;
+        margin-left: 15%;
+        background-color: white;
+        color: black;
+        border-color: black
     }
 }
 
@@ -84,11 +107,15 @@
         width: 70%;
         margin-left: 15%;
         font-size: 0.9rem;
+        border-radius: 0px;
     }
     .contactbutton {
         width: 73%;
         margin-left: 15%;
         font-size: 0.9rem;
+        background-color: white;
+        color: black;
+        border-color: black
     }
 }
 
@@ -105,13 +132,17 @@
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
         font-size: 0.8rem;
+        border-radius: 0px;
     }
     .contactbutton {
-        width: 89%;
+        width: 90%;
         margin-left: 5%;
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
         font-size: 0.8rem;
         padding: 0.8rem;
+        background-color: white;
+        color: black;
+        border-color: black
     }
 }
